# WTM

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Config_file.cfg  Equilibrium_version_HADCM3.f90  Equilibrium_version_with_SW.f90  Makefile  README.md  area.f90  ewtProgram.f90  groundwater_transient.cpp  priority-SW-coupled-GW-and-SW_WORKING.f90  semi-priority-queue-single-working.f90
.github/workflows/: clang-format-check.yml
Combined/: ArrayPack.cpp  ArrayPack.hpp  Makefile  Makefile GW  N_America_coarser.cfg  TWSM.cpp  add_recharge.hpp  combined.cpp  dephier.hpp  dh_flow.hpp  evaporation.hpp  fill_spill_merge.hpp  global.cfg  global_equilibrium.cfg  global_transient.cfg  groundwater.cpp  irf.cpp  mat_mult.cpp  parameters.cpp  parameters.hpp  run_dephier.cpp  run_equilibrium_only.cpp  run_transient_coupled.cpp  run_transient_coupled_AGU_2019.cpp  run_transient_like_equilibrium_coupled.cpp  surface_water.cpp  test_equilibrium_only.hpp  test_equilibrium_only_test.hpp  test_equilibrium_only_test_all_at_once_binned.hpp  test_kerry_FSM.cpp  test_transient_how_many_cells_are_done.cpp  test_transient_method_with_only_start_values.cpp  test_transient_only.cpp  transient_groundwater.cpp  transient_groundwater.hpp  transient_groundwater.hpp.backup  transient_groundwater_with_porosity_efolding.cpp  update_effective_storativity.hpp
Combined/initdata/: kerry_test_mask.dem
Combined/surfdata/: kerry_test_fslope_rotated.dem  kerry_test_ksat.dem  kerry_test_rech_rotated.dem  kerry_test_temp_rotated.dem  kerry_test_topo_rotated.dem
common/: debugging_utilities.hpp  netcdf.hpp
cpp/: Array2D.hpp  DisjointDenseIntSet.hpp  Makefile  dep-hier.cpp  dephier.hpp  dephier_a.hpp  dephier_b.hpp  dephier_kerry.hpp  groundwater.cpp  main.cpp  netcdf.hpp  run_tests.sh  testdem11.dem  testdem2.dem  testdem3.dem  testdem4.dem  testdem6.dem
cpp/misc/: dep-hier.cpp.bk  dep-hier.cpp.bk2
cpp/test_cases/: kerry_test.dem  kerry_test1.dem  kerry_test12.dem  kerry_test13.dem  kerry_test14.dem  kerry_test2.dem  kerry_test3.dem  kerry_test4.dem  kerry_test5.dem  kerry_test6.dem  kerry_test7.dem  testdem1.dem  testdem10.dem  testdem11.dem  testdem12.dem  testdem2.dem  testdem3.dem  testdem4.dem  testdem5.dem  testdem6.dem  testdem7.dem  testdem8.dem  testdem9.dem
fortran/: 500-year-version_monthly_with_surface_flow.f90  Equilibrium_groundwater_only.f90  Equilibrium_version_with_SW.f90  Makefile  priority-SW-coupled-GW-and-SW_WORKING.f90  priority-SW-coupled-GW-and-SW_WORKING.f90.orig  semi-priority-queue-single-working.f90
groundwater/: ArrayPack.cpp  ArrayPack.hpp  Makefile  global.cfg  groundwater.cpp  groundwater_transient.cpp  madagascar.cfg  netcdf.hpp  parameters.cpp  parameters.hpp  test_equilibrium_only.cpp  test_transient_only.cpp
src/: ArrayPack.cpp  ArrayPack.hpp  CreateSNES.cpp  CreateSNES.hpp  DMDA_array_pack.cpp  DMDA_array_pack.hpp  DisjointDenseIntSet.hpp  TWSM.cpp  WTM.cpp  add_recharge.hpp  dephier.hpp  doctest.h  fill_spill_merge.hpp  irf.cpp  irf.hpp  parameters.cpp  parameters.hpp  radix_heap.hpp  run_dephier.cpp  test_fill_spill_merge.cpp  test_kerry_FSM.cpp  transient_groundwater.cpp  transient_groundwater.hpp  update_effective_storativity.cpp  update_effective_storativity.hpp
surfacewater/: dephier.hpp  fill_spill_merge.hpp  main.cpp
surfacewater/test_cases/: kerry_wtd10.dem  kerry_wtd10a.dem  testwtd12.dem  testwtd2.dem  testwtd6a.dem
tests/: test_fill_spill_merge.cpp
